--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* style.css */
 
+/* Default styles */
+
 body {
     font-family: -apple-system, BlinkMacSystemFont;
     margin: 0;
@@ -125,4 +127,56 @@ footer {
 
 footer p {
     margin: 0;
+}
+
+/* Media queries for mobile screens */
+
+@media only screen and (max-width: 768px) {
+    header .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .logo-title {
+        margin-bottom: 1em;
+    }
+
+    .logo {
+        height: 100px;
+        margin-right: 0;
+    }
+
+    header h1 {
+        font-size: 1.5em;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 1em;
+    }
+
+    header nav ul li {
+        margin: 0.5em;
+    }
+
+    .container {
+        padding: 1em;
+    }
+
+    .about,
+    .directions,
+    .contact {
+        margin: 1em 0;
+        padding: 1em;
+    }
+
+    iframe {
+        height: 300px;
+    }
+
+    form input,
+    form textarea,
+    form button {
+        width: 100%;
+    }
 }
